# media-library-tools

./: .coveragerc  .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI copy.md  GEMINI.md  QWEN.md  README.md  ROADMAP.md  bandit  bandit-baseline  bandit-config-generator  black  blackd  build.py  coverage  identify-cli  markdown-it  nodeenv  pip3  plex_correct_dirs  plex_make_all_seasons  plex_make_dirs  plex_make_seasons  plex_make_years  plex_move_movie_extras  plex_movie_subdir_renamer  plex_server_episode_refresh  plex_update_tv_years  pre-commit  pygmentize  pyproject.toml  radon  requirements.txt  sabnzbd_cleanup  script_template  (+3 more)
.github/workflows/: build-and-test.yml
SABnzbd/: README.md  sabnzbd_cleanup
SABnzbd/docs/: sabnzbd_cleanup.md
docs/: build_system_enhancement.md  new_workflow.md
docs/sprints/: sprint_10.0_validation.md
lib/: cache_manager.py  cleanup.py  core.py  credential_manager.py  filesystem.py  media_name_utils.py  retry_utils.py  season_detection.py  tvdb_client.py  ui.py  validation.py
lib/docs/: ui.md
planning/analysis/: 081825_code_review.md  081825_tests_analysis.md  082125_documentation_gap_analysis.md  082725_key_questions_to_answer.md  cli_refactoring_plans.md  cli_standardization_analysis.md  plex_season_scripts_comparison.md  qbittorrent_qbt_post_download_processor.md
plex/: README.md  plex_correct_dirs  plex_make_all_seasons  plex_make_dirs  plex_make_seasons  plex_make_years  plex_move_movie_extras  plex_movie_subdir_renamer  plex_update_tv_years
plex-api/: README.md  plex_server_episode_refresh
plex-api/docs/: plex_server_episode_refresh.md
plex/docs/: plex_correct_dirs.md  plex_make_all_seasons.md  plex_make_dirs.md  plex_make_seasons.md  plex_make_years.md  plex_move_movie_extras.md  plex_movie_subdir_renamer.md  plex_update_tv_years.md
src/SABnzbd/: sabnzbd_cleanup
src/plex/: plex_correct_dirs  plex_make_all_seasons  plex_make_dirs  plex_make_seasons  plex_make_years  plex_move_movie_extras  plex_movie_subdir_renamer  plex_update_tv_years
src/plex-api/: plex_server_episode_refresh
tests/: README.md  run_tests.py  test_banner_system.py  test_config.py  test_plex_server_episode_refresh.py  test_plex_update_tv_years.py
tests/fixtures/: README.md
tests/integration/: test_banner_system.py  test_batch_operations.py  test_cli_standardization.py  test_config_integration.py  test_error_scenarios.py  test_global_config_cli.py  test_workflow.py
tests/performance/: optimization_validation.py  simple_performance_test.py  test_config_performance.py  test_sabnzbd_performance.py
tests/test_data/: README.md
tests/unit/: test_cli_consistency.py  (+19 more)
(+41 files in other folders)
